package service.implementation;
import service.IGrillaDePeliculas;

public class GrillaDePeliculasProxy implements IGrillaDePeliculas {

    private IP ip;

}
