@startuml
'https://plantuml.com/class-diagram
'___________STYLES___________
title UML - Servicio de streaming (Netflix)
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________
package model {

class Pelicula {
- nombre: String
- pais: String
- url: String
+ Pelicula(String nombre, String pais, String url)
+ getNombre(): String
+ setNombre(String nombre)
+ getPais(): String
+ setPais(String pais)
+ getUrl(): String
+ setUrl(String url)
}

class CatalogoDePeliculas {
- catalogo: List<Pelicula>
+ CatalogoDePeliculas()
+ getCatalogo(): List<Pelicula>
+ setCatalogo(List<Pelicula> catalogo)
}

class IP {
- dirección: String
+ getDirección: String
+ setDirección(String dirección)
+ getPais(): String
}

}
package service {

interface IGrillaDePeliculas {
+ getPelicula(String nombre): Pelicula
}

class GrillaDePeliculas {
- catalogo: CatalogoDePeliculas
+ getPelicula(String nombre): Pelicula
}

class GrillaDePeliculasProxy {
- grillaDePeliculas: GrillaDePeliculas
- ip: IP
+ GrillaDePeliculasProxy(GrillaDePeliculas grillaDePeliculas)
+ getIP(): IP
+ setIP(IP ip)

}

}

package exceptions {

class PeliculaNoHabilitadaException {
+ PeliculaNoHabilitadaException(String messageForUser)
}
}

CatalogoDePeliculas -> Pelicula
model <.. service
service ..> exceptions
IGrillaDePeliculas <|.. GrillaDePeliculas
IGrillaDePeliculas <|.. GrillaDePeliculasProxy

@enduml